--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@component-driven/mdx-deck-theme",
   "version": "0.0.0-development",
   "description": "Component-Driven theme for presentations",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/component-driven/mdx-deck-theme.git"
