fix: Transpile React so it can be consumed as a module

--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "@component-driven/mdx-deck-theme",
   "version": "0.0.0-development",
   "description": "Component-Driven theme for presentations",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "source": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/component-driven/mdx-deck-theme.git"
   },
-  "keywords": ["MDX", "Gatsby", "Theme UI", "theme", "presentation"],
+  "keywords": [
+    "MDX",
+    "Gatsby",
+    "Theme UI",
+    "theme",
+    "presentation"
+  ],
   "author": "Andrey Okonetchnikov <andrey@okonet.ru>",
   "license": "MIT",
   "bugs": {
@@ -15,6 +22,8 @@
   },
   "homepage": "https://github.com/component-driven/mdx-deck-theme#readme",
   "scripts": {
+    "build": "babel --delete-dir-on-start --ignore '**/*.spec.js' --env-name cjs -d dist/ src/",
+    "prepare": "npm run build",
     "postinstall": "patch-package",
     "test": "echo \"Error: no test specified\" && exit 1",
     "posttest": "npm run format",
@@ -30,9 +39,13 @@
     "theme-ui": "0.3.1"
   },
   "devDependencies": {
-    "mdx-deck": "^4.1.1",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.0",
+    "@babel/preset-env": "7.9.5",
+    "@babel/preset-react": "7.9.4",
     "husky": "^4.2.3",
     "lint-staged": "^10.1.2",
+    "mdx-deck": "^4.1.1",
     "patch-package": "6.2.2",
     "prettier": "^2.0.4"
   },
